data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_861.wast
;; 2. **Mismatched Operand Stack Management:**    - Use a `br` instruction within a `block` that incorrectly handles operand stack types before and after the branch.     - **Constraint Checked:** Operand stack type matching and restoration.    - **CFG Impact:** If the operand stack is not correctly unwound and restored, subsequent operations might process incorrect values, leading to erroneous control flow.

(assert_invalid
  (module
    (func $mismatched-operand-stack
      (block (result i32)
        (i64.const 1) 
        (br 0) 
        (i32.const 2)
      )
    )
  )
  "type mismatch"
)